[package]
name = "cacache_serde"
version = "0.1.0"
edition = "2021"
msrv = "1.66.1"

[dependencies]
cacache = { version = "^13.0.0", default-features = false }
rmp-serde = "^1.3.0"
serde = "^1.0.201"
thiserror = "^1.0.60"
chashmap = "^2.2.2"

tokio = { version = "1.37.0", optional = true }
async-std = { version = "1.12.0", optional = true }

[features]
default = ["async-std", "mmap"]
mmap = ["cacache/mmap"]
async-std = ["dep:async-std", "cacache/async-std"]
link_to = ["cacache/link_to"]
tokio-runtime = ["dep:tokio", "cacache/tokio-runtime"]

[lints.rust]
unsafe_code = "forbid"
async_fn_in_trait = { level = "allow", priority = 1 }

[lints.clippy]
# Applied
enum_glob_use = { level = "deny", priority = 1 }
semicolon_if_nothing_returned = { level = "warn", priority = 1 }
use_self = { level = "warn", priority = 1 }
or_fun_call = { level = "warn", priority = 1 }
match_same_arms = { level = "warn", priority = 1 }
manual_string_new = { level = "warn", priority = 1 }
doc_markdown = { level = "warn", priority = 1 }
uninlined_format_args = { level = "warn", priority = 1 }
explicit_iter_loop = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }

# Won't apply
must_use_candidate = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
